avoid cropped menu in list component

--- a/src/index.scss
+++ b/src/index.scss
@@ -401,11 +401,6 @@ abbr[title] {
   text-decoration: none !important;
 }
 
-/* Infinite scroll */
-.infinite-scroll-component {
-  overflow: hidden !important;
-}
-
 /* Photos skeleton animation */
 @keyframes shimmer {
   100% {
